--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,21 @@
-NEXT_PUBLIC_FIREBASE_API_KEY=your_firebase_api_key
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your_firebase_auth_domain
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_firebase_project_id
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyCowdIHhjf8WyiUc_xkXYtCud5DW75SIn8",
+  authDomain: "localmusiclessons-ff87b.firebaseapp.com",
+  projectId: "localmusiclessons-ff87b",
+  storageBucket: "localmusiclessons-ff87b.firebasestorage.app",
+  messagingSenderId: "182373655384",
+  appId: "1:182373655384:web:abd9fccf03f42382e07b2d",
+  measurementId: "G-YK5PF8S253"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
