--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "music-teacher-platform",
+  "name": "music-teacher-marketplace",
   "version": "1.0.0",
-  "private": true,
+  "description": "Connects music teachers and students. Teachers pay monthly to post.",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "echo \"No test specified\""
   },
   "dependencies": {
-    "firebase": "^10.4.0",
-    "next": "13.4.12",
+    "firebase": "10.14.1",
+    "firebase-admin": "11.11.1",
+    "next": "14.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "stripe": "^12.8.0"
+    "stripe": "12.17.0",
+    "zod": "3.22.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.12",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3"
+    "@types/node": "20.11.17",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.16",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.2.4",
+    "postcss": "8.4.32",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.3.3"
   }
 }
