--- a/package.json
+++ b/package.json
@@ -10,23 +10,18 @@
     "test": "echo \"No test specified\""
   },
   "dependencies": {
-    "firebase": "10.14.1",
-    "firebase-admin": "11.11.1",
-    "next": "14.2.4",
+    "firebase": "^10.4.0",
+    "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "stripe": "12.17.0",
-    "zod": "3.22.4"
+    "stripe": "^12.8.0"
   },
   "devDependencies": {
-    "@types/node": "20.11.17",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.16",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.2.4",
-    "postcss": "8.4.32",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "autoprefixer": "^10.4.14",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.12",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.3"
   }
 }
