Save changes to package.json before pull

--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "test": "echo \"No test specified\""
   },
   "dependencies": {
+    "@stripe/stripe-js": "^7.4.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "firebase": "^10.4.0",
-    "next": "13.4.12",
+    "lucide-react": "^0.523.0",
+    "next": "^13.5.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "stripe": "^12.8.0"
+    "stripe": "^12.18.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
+    "@types/react": "19.1.8",
+    "autoprefixer": "^10.4.21",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.12",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.1.3"
   }
 }
